force-app/main/default/objects/HRCSVC_Standing_PO_Rule__c/HRCSVC_Standing_PO_Rule__c.object-meta.xml
<CustomObject>
    <label>Standing PO Rule</label>
    <nameField>
        <label>Standing PO Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Standing PO Rule</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>