force-app/main/default/objects/HRCSVC_Standing_PO_Rule__c/fields/HRCSVC_Agreement_Number__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Agreement_Number__c</fullName>
    <label>Agreement Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>