force-app/main/default/objects/HRCSVC_Standing_PO_Rule__c/fields/HRCSVC_Item_Class__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Item_Class__c</fullName>
    <label>Item Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>