force-app/main/default/objects/HRCSVC_Standing_PO_Rule__c/fields/HRCSVC_Product__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Standing PO Rule</relationshipLabel>
    <relationshipName>Standing_PO_Rule</relationshipName>
    <type>Lookup</type>
</CustomField>