force-app/main/default/objects/HRCSVC_Standing_PO_Rule__c/fields/HRCSVC_Standing_PO__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Standing_PO__c</fullName>
    <label>Standing PO</label>
    <referenceTo>HRCSVC_Standing_PO__c</referenceTo>
    <relationshipLabel>Standing PO Rule</relationshipLabel>
    <relationshipName>Standing_PO_Rule</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>