force-app/main/default/objects/HRCSVC_Standing_PO_Rule__c/fields/HRCSVC_Valid_From__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Valid_From__c</fullName>
    <label>Valid From</label>
    <type>Date</type>
</CustomField>