force-app/main/default/objects/HRCSVC_Standing_PO_Rule__c/fields/HRCSVC_Valid_To__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Valid_To__c</fullName>
    <label>Valid To</label>
    <type>Date</type>
</CustomField>