force-app/main/default/objects/HRCSVC_Standing_PO_Rule__c/fields/HRCSVC_Ward__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Ward__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ward</label>
    <referenceTo>HRCFSL_Ward__c</referenceTo>
    <relationshipLabel>Standing PO Rule</relationshipLabel>
    <relationshipName>Standing_PO_Rule</relationshipName>
    <type>Lookup</type>
</CustomField>