force-app/main/default/objects/HRCSVC_Standing_PO_Rule__c/fields/HRCSVC_Ward_Text__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Ward_Text__c</fullName>
    <label>Ward Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>